--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
 		"@babel/preset-env": "^7.16.4",
 		"@babel/preset-react": "^7.16.0",
 		"@babel/runtime": "^7.16.3",
+		"babel-cli": "^6.26.0",
+		"babel-core": "^6.26.3",
 		"babel-eslint": "^10.1.0",
-		"babel-loader": "^8.2.3",
+		"babel-loader": "^8.4.1",
 		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-preset-env": "^1.7.0",
 		"bc-console": "0.0.2",
 		"css-loader": "^6.5.1",
 		"error-overlay-webpack-plugin": "^1.0.0",
